--- a/HW_14/index.html
+++ b/HW_14/index.html
@@ -29,7 +29,8 @@
 					<div class="form-holder col">
 						<form class="form-inline my-2 my-lg-0">
 							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-							<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+							<button class="btn submit btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+							<button class="btn create btn-primary my-2 my-sm-0" type="button">Create Pizza</button>
 						</form>
 					</div>
 				</div>
@@ -74,6 +75,99 @@
 	</footer>
 </div>
 
+<div class="pizza-info">
+	<div class="pizza-info_card" id="pizzaContainer">
+		<!--		<div class="exit-btn">-->
+		<!--			<a href="#">-->
+		<!--				<i class="icon-close"></i>-->
+		<!--			</a>-->
+
+		<!--		</div>-->
+		<!--		<div class="info-wrapper">-->
+		<!--			<div class="left-side">-->
+		<!--				<h1>Name of pizza</h1>-->
+		<!--				<img src="images" alt="pizza">-->
+		<!--			</div>-->
+		<!--			<div class="right-side">-->
+		<!--				<span>Состав</span>-->
+		<!--				<ul>-->
+		<!--					<li>Сыр</li>-->
+		<!--					<li>Сыр</li>-->
+		<!--					<li>Сыр</li>-->
+		<!--				</ul>-->
+		<!--				<p>Цена 100</p>-->
+		<!--				<p>Калорийность 1200</p>-->
+		<!--			</div>-->
+		<!--		</div>-->
+	</div>
+</div>
+
+<div class="wrapper-constructor">
+	<div class="constructor">
+<!--		<div class="exit-btn">-->
+<!--			<a href="#">-->
+<!--				<i class="icon-close"></i>-->
+<!--			</a>-->
+<!--		</div>-->
+<!--		<h2 class="constructor-title">Конструктор пиццы</h2>-->
+<!--		<input type="text" class="form-control nameOfNewPizza" placeholder="Введите название пиццы:">-->
+<!--		<button class="btn btn-primary" type="button">Добавить</button>-->
+<!--		<button class="btn btn-primary btn-success" type="button">Сохранить</button>-->
+<!--		<div class="content-holder">-->
+<!--			<div class="left-side">-->
+<!--				<div class="image-container">-->
+<!--					<img src="images/01_osnovanie.png" alt="osnovanie" class="img-osnova">-->
+<!--					<img class="component" src="images/02_sous.png" alt="components">-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="right-side">-->
+<!--				<div class="top">-->
+<!--					<div class="left">-->
+<!--						<h5>Выберите соус:</h5>-->
+<!--						<div class="sous-holder">-->
+<!--							<label for="2"><input class="check" type="checkbox" id="2"> Классический-->
+<!--							</label>-->
+<!--							<label for="17"><input class="check" type="checkbox" id="17"> Соус BBQ</label>-->
+<!--							<label for="18"><input class="check" type="checkbox" id="18"> Соус Рикотта</label>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="right">-->
+<!--						<h5>Выберите сыр:</h5>-->
+<!--						<div class="cheese-holder">-->
+<!--							<label for="3"><input type="checkbox" id="3"> Моцарелла</label>-->
+<!--							<label for="4"><input type="checkbox" id="4"> Чеддар</label>-->
+<!--							<label for="5"><input type="checkbox" id="5"> Пармезан</label>-->
+<!--							<label for="6"><input type="checkbox" id="6"> Дорблю</label>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="bottom">-->
+<!--					<div class="left">-->
+<!--						<h5>Выберите мясо:</h5>-->
+<!--						<div class="meat-holder">-->
+<!--							<label for="12"><input type="checkbox" id="12"> Пепперони</label>-->
+<!--							<label for="13"><input type="checkbox" id="13"> Ветчина</label>-->
+<!--							<label for="14"><input type="checkbox" id="14"> Лосось</label>-->
+<!--							<label for="15"><input type="checkbox" id="15"> Бекон</label>-->
+<!--							<label for="16"><input type="checkbox" id="16"> Курица</label>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--					<div class="right">-->
+<!--						<h5>Выберите мясо:</h5>-->
+<!--						<div class="veggie-holder">-->
+<!--							<label for="7"><input type="checkbox" id="7"> Томаты</label>-->
+<!--							<label for="8"><input type="checkbox" id="8"> Лук</label>-->
+<!--							<label for="9"><input type="checkbox" id="9"> Кукуруза</label>-->
+<!--							<label for="10"><input type="checkbox" id="10"> Перец</label>-->
+<!--							<label for="11"><input type="checkbox" id="11"> Ананас</label>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+
+<!--			</div>-->
+<!--		</div>-->
+	</div>
+</div>
 
 <script src="pizzaList.js"></script>
 <script src="script.js"></script>
