--- a/HW_14/index.html
+++ b/HW_14/index.html
@@ -31,6 +31,9 @@
 							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 							<button class="btn submit btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 							<button class="btn create btn-primary my-2 my-sm-0" type="button">Create Pizza</button>
+							<button class="btn basket-icon btn-primary my-2 my-sm-0 header-basket" type="button">
+								<i class="icon-basket"></i>
+							</button>
 						</form>
 					</div>
 				</div>
@@ -166,6 +169,21 @@
 
 <!--			</div>-->
 <!--		</div>-->
+	</div>
+</div>
+
+<div class="wrapper-basket">
+	<div class="basket">
+		<div class="exit-btn">
+		<a href="#">
+			<i class="icon-close"></i>
+		</a>
+	</div>
+		<h2 class="basket-title">Корзина</h2>
+		<div id="buskets">
+
+		</div>
+		<p>Итого:</p>
 	</div>
 </div>
 
