--- a/HW_14/index.html
+++ b/HW_14/index.html
@@ -183,7 +183,10 @@
 		<div id="buskets">
 
 		</div>
-		<p>Итого:</p>
+		<div class="sum">
+		<p class="sumAmount"></p>
+		<p class="sumPrice"></p>
+		</div>
 	</div>
 </div>
 
