--- a/HW_14/index.html
+++ b/HW_14/index.html
@@ -190,6 +190,9 @@
 	</div>
 </div>
 
+
+<script src="displaySwitch.js"></script>
+<script src="storage.js"></script>
 <script src="pizzaList.js"></script>
 <script src="script.js"></script>
 </body>
