--- a/HW_14/index.html
+++ b/HW_14/index.html
@@ -180,6 +180,11 @@
 		</a>
 	</div>
 		<h2 class="basket-title">Корзина</h2>
+		<div class="order">
+			<form action="order.html">
+				<button class="btn btn-outline-success">Оформить заказ</button>
+			</form>
+		</div>
 		<div id="buskets">
 
 		</div>
@@ -191,7 +196,7 @@
 </div>
 
 
-<script src="displaySwitch.js"></script>
+<!--<script src="CLW/js/cart.js"></script>-->
 <script src="storage.js"></script>
 <script src="pizzaList.js"></script>
 <script src="script.js"></script>
