--- a/HW_14/index.html
+++ b/HW_14/index.html
@@ -21,12 +21,12 @@
 		<div class="container">
 			<div class="navbar">
 				<div class="row navigation">
-					<div class="col logo-holder">
+					<div class=" logo-holder">
 						<div>
 							<a href="#"><img src="images/pizza_logo.png" alt="logo"></a>
 						</div>
 					</div>
-					<div class="form-holder col">
+					<div class="form-holder ">
 						<form class="form-inline my-2 my-lg-0">
 							<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 							<button class="btn submit btn-outline-success my-2 my-sm-0" type="submit">Search</button>
