--- a/HW_14/order.html
+++ b/HW_14/order.html
@@ -3,19 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Order</title>
+	<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap&subset=cyrillic,cyrillic-ext"
+	      rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates:100,100i,200,200i,300,300i,400,400i,500,500i&display=swap"
+	      rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="order-wrapper">
-	<div class="container">
+
 		<div class="order-modal">
 			<h2>Спасибо за Ваш заказ!</h2>
 			<p class="orderId">Ваш заказ под номером </p>
 			<p class="totalCount">Всего</p>
 			<p class="totalPrice">Всего</p>
 		</div>
-	</div>
+
 </div>
 
 
